style sheet update

--- a/css/style.css
+++ b/css/style.css
@@ -1499,7 +1499,7 @@ Panel
     float: left;
     font-size: 15px;
     font-weight: bold;
-    line-height: 24px;
+    line-height: 27px;
     min-height: 39px;
     padding: 5px 24px 5px 16px;
     text-transform: uppercase;
@@ -1511,7 +1511,7 @@ Panel
     border-left: 1px solid #D8D8D8;
     border-right: 1px solid #D8D8D8;
     border-bottom: 1px solid #D8D8D8;
-    
+    overflow: hidden;
 }
 .panel-block {
     padding-bottom: 10px;
@@ -1674,10 +1674,6 @@ Panel
 }
 .pages-info .dropdown-list ul {
     left: 0;
-}
-.bottom-pagination .dropdown-list ul {
-    bottom: 0;
-    top: auto;
 }
 /*----------Grid Action Group-----------*/
 
@@ -1901,7 +1897,7 @@ Alert message
     font-size: 12px;
     margin-bottom: 5px;
     max-width: 260px;
-    padding: 7px 13px 10px 8px;
+    padding: 7px 13px 7px 8px;
     position: absolute;
     right: -266px;
     top: 0;
@@ -1922,8 +1918,6 @@ Alert message
     position: absolute;
     top: -12px;
     transform: rotate(-92deg);
- -webkit-transform: rotate(-92deg);
- -moz-transform: rotate(-92deg);
 }
 /*------------------------------------*\
 switch 
@@ -2193,6 +2187,11 @@ Table
     margin-top: -3px;
 }
 .table-record .mCSB_container_wrapper{position:relative;}
+
+
+
+
+
 /*------------------------------------*\
 Forms Element 
 \*------------------------------------*/
@@ -2233,6 +2232,11 @@ Forms Element
 .highlight-input {
     border: 1px solid #ff0000;
 }
+
+
+
+
+
 /*------------------------------------*\
 Element Block Style
 \*------------------------------------*/
@@ -2257,6 +2261,11 @@ Element Block Style
     margin-bottom: 20px;
     padding: 30px 15px;
 }
+
+
+
+
+
 /*------------------------------------*\
 Header
 \*------------------------------------*/
@@ -2783,32 +2792,32 @@ Sidebar
     width: 60px;
 	  font-size: 0;
 }
-.left-panel li.operation-planning{background-image:url("../img/dashborad/svg/operation-planning.svg");}
-.left-panel li.operation-planning:hover{background-image:url("../img/dashborad/svg/operation-planning-hover.svg");}
+.left-panel li.operation-planning{background-image:url("../img/dashborad/svg/sidebar/operation-planning.svg");}
+.left-panel li.operation-planning:hover{background-image:url("../img/dashborad/sidebar/svg/operation-planning-hover.svg");}
 
-.left-panel li.billing{background-image:url("../img/dashborad/svg/billing.svg");}
-.left-panel li.billing:hover{background-image:url("../img/dashborad/svg/billing-hover.svg");}
+.left-panel li.billing{background-image:url("../img/dashborad/svg/sidebar/billing.svg");}
+.left-panel li.billing:hover{background-image:url("../img/dashborad/svg/sidebar/billing-hover.svg");}
 
-.left-panel li.edi{background-image:url("../img/dashborad/svg/edi.svg");}
-.left-panel li.edi:hover{background-image:url("../img/dashborad/svg/edi-hover.svg");}
+.left-panel li.edi{background-image:url("../img/dashborad/svg/sidebar/edi.svg");}
+.left-panel li.edi:hover{background-image:url("../img/dashborad/svg/sidebar/edi-hover.svg");}
 
-.left-panel li.gate{background-image:url("../img/dashborad/svg/gate.svg");}
-.left-panel li.gate:hover{background-image:url("../img/dashborad/svg/gate-hover.svg");}
+.left-panel li.gate{background-image:url("../img/dashborad/svg/sidebar/gate.svg");}
+.left-panel li.gate:hover{background-image:url("../img/dashborad/svg/sidebar/gate-hover.svg");}
 
-.left-panel li.containers{background-image:url("../img/dashborad/svg/containers.svg");}
-.left-panel li.containers:hover{background-image:url("../img/dashborad/svg/containers-hover.svg");}
+.left-panel li.containers{background-image:url("../img/dashborad/svg/sidebar/containers.svg");}
+.left-panel li.containers:hover{background-image:url("../img/dashborad/svg/sidebar/containers-hover.svg");}
 
-.left-panel li.services{background-image:url("../img/dashborad/svg/services.svg");}
-.left-panel li.services:hover{background-image:url("../img/dashborad/svg/services-hover.svg");}
+.left-panel li.services{background-image:url("../img/dashborad/svg/sidebar/services.svg");}
+.left-panel li.services:hover{background-image:url("../img/dashborad/svg/sidebar/services-hover.svg");}
 
-.left-panel li.reporting{background-image:url("../img/dashborad/svg/reporting.svg");}
-.left-panel li.reporting:hover{background-image:url("../img/dashborad/svg/reporting-hover.svg");}
+.left-panel li.reporting{background-image:url("../img/dashborad/svg/sidebar/reporting.svg");}
+.left-panel li.reporting:hover{background-image:url("../img/dashborad/svg/sidebar/reporting-hover.svg");}
 
-.left-panel li.operation-dashboard{background-image:url("../img/dashborad/svg/operation-dashboard.svg");}
-.left-panel li.operation-dashboard:hover{background-image:url("../img/dashborad/svg/operation-dashboard-hover.svg");}
+.left-panel li.operation-dashboard{background-image:url("../img/dashborad/svg/sidebar/operation-dashboard.svg");}
+.left-panel li.operation-dashboard:hover{background-image:url("../img/dashborad/svg/sidebar/operation-dashboard-hover.svg");}
 
-.left-panel li.administration{background-image:url("../img/dashborad/svg/administration.svg");}
-.left-panel li.administration:hover{background-image:url("../img/dashborad/svg/administration-hover.svg");}
+.left-panel li.administration{background-image:url("../img/dashborad/svg/sidebar/administration.svg");}
+.left-panel li.administration:hover{background-image:url("../img/dashborad/svg/sidebar/administration-hover.svg");}
 
 
 /* For Responsive View */
@@ -2895,7 +2904,6 @@ Main Body
     padding-top: 20px;
 }
 
-
 /*------------------------------------*\
 Home Block
 \*------------------------------------*/
@@ -2904,7 +2912,11 @@ body p {
     line-height: 18px;
 }
 .element-sec {
-    
+    background: #ffffff none repeat scroll 0 0;
+    border-bottom: 1px solid #d8d8d8;
+    border-left: 1px solid #d8d8d8;
+    border-right: 1px solid #d8d8d8;
+    overflow: hidden;
     padding-bottom: 35px;
     padding-left: 21px;
     padding-right: 20px;
@@ -2923,6 +2935,22 @@ body p {
     transition: all 0.5s ease 0s;
 }
 .element-block:hover p,.element-block:hover h3{color:#fff;}
+.element-block:hover h3 { border-bottom: 1px solid rgba(255, 255, 255, 0.2);  }
+.element-block.bayplan .icon {
+    background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/bayplan-icon.png") no-repeat scroll 15px 0;
+  
+}
+.element-block.bayplan:hover .icon {
+    background-position:16px -71px;
+}
+.element-block.bayplan .icon {
+   
+    display: block;
+    height: 65px;
+    margin: 0 auto;
+    text-align: center;
+    width: 85px;
+}
 .element-block h3 {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     color: #2991d6;
@@ -2933,37 +2961,7 @@ body p {
     padding: 15px 0;
     text-transform: uppercase;
 }
-.element-block:hover h3 { border-bottom: 1px solid rgba(255, 255, 255, 0.2);  }
-.element-block .icon {
-     display: block;
-    height: 65px;
-    margin: 0 auto;
-    text-align: center;
-    width: 85px;
 }
-.element-block.bayplan .icon {
-    background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/bayplan-icon.png") no-repeat scroll 15px 0;
-  
-}
-.element-block.bayplan:hover .icon {
-    background-position:16px -71px;
-}
-.element-block.generic-reports .icon {
-    background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/generic-reports-icon.png") no-repeat scroll 15px -70px;}
-	
-.element-block.generic-reports:hover .icon {
-    background-position: 15px 0;
-}
-.element-block.bis1 .icon {
-    background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/bis-icon.png") no-repeat scroll 15px 22px;}
-	.element-block.bis1:hover .icon {
-    background-position: 15px -62px;
-}
-.element-block.demos .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/demos-icon.png") no-repeat scroll 15px 0;}
-.element-block.demos:hover .icon {background-position: 15px -72px;}
-.element-block.about-zodiac .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/about-zodiac-icon.png") no-repeat scroll 10px 0;}
-.element-block.about-zodiac:hover .icon {background-position: 10px -70px;}
-
 
 
 /*------------------------------------*\
@@ -2985,6 +2983,3 @@ Footer
 
 
 .mobile-sidebarmenu{display:none;}
-.error-msg-text .error-info-icon {
-    margin: 0 30px 0 0;
-}
