--- a/css/style.css
+++ b/css/style.css
@@ -1587,6 +1587,7 @@ Panel
     float: left;
     margin-right: 15px;
     line-height: 20px;
+	height: 20px;
 }
 .pagination-block {
     height: 45px;
@@ -3004,3 +3005,42 @@ Footer
 
 
 .mobile-sidebarmenu{display:none;}
+
+
+
+/*------------------------------------*\
+Login
+\*------------------------------------*/
+.login-header {
+    background: #f6f6f6 none repeat scroll 0 0;
+    border-bottom: 1px solid #e2e2e2;
+    padding-top: 60px;
+}
+.login-container {
+    margin: 0 auto;
+    width: 460px;
+}
+.logo-header {
+    background: #ffffff none repeat scroll 0 0;
+    border: 1px solid #d8d8d8;
+    padding: 20px 0 10px;
+    position: relative;
+    text-align: center;
+    z-index: 9999;
+}
+.user-login {
+    color: #2991d6;
+    display: block;
+    margin-top: 10px;
+}
+.login-container {
+    margin: 0 auto;
+    width: 460px;
+}
+.form {
+    background: #ffffff none repeat scroll 0 0;
+    border: 1px solid #d8d8d8;
+    box-shadow: 0 0 11px -1px rgba(0, 0, 0, 0.2);
+    margin-top: -2px;
+    padding: 30px 10px;
+}
