--- a/css/responsive.css
+++ b/css/responsive.css
@@ -274,7 +274,7 @@ iPad portrait · width: 768px
     padding-top: 20px;
     width: 96%;
 }
-
+.left-panel ul li a{  font-size: 12px; line-height: 14px;}
 
 }
 
