--- a/css/style.css
+++ b/css/style.css
@@ -685,6 +685,9 @@ Text Box
     -moz-box-shadow: 0 0 4px rgba(41, 145, 214, 0.3);
 }
 html body .form-col-2.p-r-5 .disable-text-box {
+     cursor: no-drop;
+}
+.disable-text-box {
     background: #f6f6f6 none repeat scroll 0 0;
     cursor: no-drop;
 }
@@ -692,6 +695,10 @@ html body .form-col-2.p-r-5 .disable-text-box {
     position: absolute;
     right: 10px;
     top: 10px;
+}
+
+html body button[disabled], html div input[disabled] {
+    cursor: no-drop;
 }
 /*------------------------------------*\
 Lable
@@ -1319,7 +1326,7 @@ Accordion
 .accordion-content {
     font-size: 12px;
     line-height: 20px;
-    margin: 20px 0;
+    margin: 35px 0;
 }
 .accordion-panel.active h3 {
     color: #2991d6;
@@ -1348,6 +1355,9 @@ Accordion
 }
 .accordion-header:hover {
     cursor: pointer;
+}
+.accordion-sub-title {
+    padding: 0 0 11px;
 }
 /*------------------------------------*\
 Date and time Piker
@@ -2468,6 +2478,7 @@ Forms Element
     padding: 10px;
     resize: none;
     width: 100%;
+	  margin: 0 0 5px;
 }
 
 .highlight-input {
@@ -2537,7 +2548,7 @@ Header
     padding-bottom: 5px;
 }
 .header-time {
-    background: rgba(0, 0, 0, 0) url("../img/icons/clock-icon.png") no-repeat scroll 0 0;
+    background: rgba(0, 0, 0, 0) url("../img/icons/clock-icon.svg") no-repeat scroll 0 0;
     color: #5c5c5c;
     float: right;
     font-size: 11px;
@@ -2840,6 +2851,30 @@ ul.nav li:hover > ul.dropdown-menu {
     text-align: center;
     width: 22px;
 }
+.menu .icon img {
+    width: 11px;
+}
+.menu .home.icon {
+    background: rgba(0, 0, 0, 0) url("../img/icons/home.svg") no-repeat scroll center center / 14px auto;
+}
+.menu .home.icon:hover ,.menu .active .home.icon {
+    background: rgba(0, 0, 0, 0) url("../img/icons/home-hover.svg") no-repeat scroll center center / 14px auto;
+}
+.menu .about-us.icon {
+    background: rgba(0, 0, 0, 0) url("../img/icons/about-us.svg") no-repeat scroll center center / 14px auto;
+}
+.menu .about-us.icon:hover ,.menu .active .about-us.icon {
+    background: rgba(0, 0, 0, 0) url("../img/icons/about-us-hover.svg") no-repeat scroll center center / 14px auto;
+}
+.menu .home.icon {
+    background: rgba(0, 0, 0, 0) url("../img/icons/home.svg") no-repeat scroll center center / 14px auto;
+}
+.menu .home.icon:hover ,.menu .active .home.icon {
+    background: rgba(0, 0, 0, 0) url("../img/icons/home-hover.svg") no-repeat scroll center center / 14px auto;
+}
+.menu .active .icon {
+    border-color: #fff;
+}	
 .nav .dropdown-menu {
     list-style: outside none none;
     margin: 0;
@@ -3022,43 +3057,44 @@ Sidebar
     background-position: center center;
     background-repeat: no-repeat;
     border-bottom: 1px solid #d8d8d8;
+	background-size: 32px auto;
     height: 60px;
     width: 60px;
+	
 }
 .left-panel li:hover{background-color:#2991d6;}
 .left-panel li a {
     color: transparent;
     display: block;
+    font-size: 0;
     height: 60px;
+    line-height: 90px;
+    text-align: center;
     width: 60px;
-	  font-size: 0;
 }
-.left-panel li.operation-planning{background-image:url("../img/dashborad/svg/sidebar/operation-planning.svg");}
-.left-panel li.operation-planning:hover{background-image:url("../img/dashborad/svg/sidebar/operation-planning-hover.svg");}
+.left-panel ul li a img {
+    width: 32px;
+}
+.left-panel li.container-vgm-mgmt{background-image:url("../img/dashborad/container-vgm-mgmt.svg");}
+.left-panel li.container-vgm-mgmt:hover{background-image:url("../img/dashborad/container-vgm-mgmt-hover.svg");}
 
-.left-panel li.billing{background-image:url("../img/dashborad/svg/sidebar/billing.svg");}
-.left-panel li.billing:hover{background-image:url("../img/dashborad/svg/sidebar/billing-hover.svg");}
+.left-panel li.upload-edi{background-image:url("../img/dashborad/upload-edi.svg");}
+.left-panel li.upload-edi:hover{background-image:url("../img/dashborad/upload-edi-hover.svg");}
 
-.left-panel li.edi{background-image:url("../img/dashborad/svg/sidebar/edi.svg");}
-.left-panel li.edi:hover{background-image:url("../img/dashborad/svg/sidebar/edi-hover.svg");}
+.left-panel li.generate-edi{background-image:url("../img/dashborad/generate-edi.svg");}
+.left-panel li.generate-edi:hover{background-image:url("../img/dashborad/generate-edi-hover.svg");}
 
-.left-panel li.gate{background-image:url("../img/dashborad/svg/sidebar/gate.svg");}
-.left-panel li.gate:hover{background-image:url("../img/dashborad/svg/sidebar/gate-hover.svg");}
+.left-panel li.rules-mgmt{background-image:url("../img/dashborad/rules-mgmt.svg");}
+.left-panel li.rules-mgmt:hover{background-image:url("../img/dashborad/rules-mgmt-hover.svg");}
 
-.left-panel li.containers{background-image:url("../img/dashborad/svg/sidebar/containers.svg");}
-.left-panel li.containers:hover{background-image:url("../img/dashborad/svg/sidebar/containers-hover.svg");}
+.left-panel li.weigh-bridge{background-image:url("../img/dashborad/weigh-bridge.svg");}
+.left-panel li.weigh-bridge:hover{background-image:url("../img/dashborad/weigh-bridge-hover.svg");}
 
-.left-panel li.services{background-image:url("../img/dashborad/svg/sidebar/services.svg");}
-.left-panel li.services:hover{background-image:url("../img/dashborad/svg/sidebar/services-hover.svg");}
+.left-panel li.reports{background-image:url("../img/dashborad/reports.svg");}
+.left-panel li.reports:hover{background-image:url("../img/dashborad/reports-hover.svg");}
 
-.left-panel li.reporting{background-image:url("../img/dashborad/svg/sidebar/reporting.svg");}
-.left-panel li.reporting:hover{background-image:url("../img/dashborad/svg/sidebar/reporting-hover.svg");}
-
-.left-panel li.operation-dashboard{background-image:url("../img/dashborad/svg/sidebar/operation-dashboard.svg");}
-.left-panel li.operation-dashboard:hover{background-image:url("../img/dashborad/svg/sidebar/operation-dashboard-hover.svg");}
-
-.left-panel li.administration{background-image:url("../img/dashborad/svg/sidebar/administration.svg");}
-.left-panel li.administration:hover{background-image:url("../img/dashborad/svg/sidebar/administration-hover.svg");}
+.left-panel li.configuration{background-image:url("../img/dashborad/configuration.svg");}
+.left-panel li.configuration:hover{background-image:url("../img/dashborad/configuration-hover.svg");}
 
 
 /* For Responsive View */
@@ -3136,28 +3172,38 @@ body p {
     text-align: center;
     width: 85px;
 }
-.element-block.bayplan .icon {
-    background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/bayplan-icon.png") no-repeat scroll 15px 0;
+.element-block.container-vgm-mgmt .icon {
+    background: rgba(0, 0, 0, 0) url("../img/dashborad/container-vgm-mgmt.svg") no-repeat scroll 15px 0;
   
 }
-.element-block.bayplan:hover .icon {
-    background-position:16px -71px;
+.element-block.container-vgm-mgmt:hover .icon {
+    background: rgba(0, 0, 0, 0) url("../img/dashborad/container-vgm-mgmt-hover.svg") no-repeat scroll 15px 0;
 }
-.element-block.generic-reports .icon {
-    background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/generic-reports-icon.png") no-repeat scroll 15px -70px;}
+.element-block.upload-edi .icon {
+    background: rgba(0, 0, 0, 0) url("../img/dashborad/upload-edi.svg") no-repeat scroll 15px 0;}
 	
-.element-block.generic-reports:hover .icon {
-    background-position: 15px 0;
-}
-.element-block.bis1 .icon {
-    background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/bis-icon.png") no-repeat scroll 15px 22px;}
-	.element-block.bis1:hover .icon {
-    background-position: 15px -62px;
-}
-.element-block.demos .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/demos-icon.png") no-repeat scroll 15px 0;}
-.element-block.demos:hover .icon {background-position: 15px -72px;}
-.element-block.about-zodiac .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/svg/dashboard-home/about-zodiac-icon.png") no-repeat scroll 10px 0;}
-.element-block.about-zodiac:hover .icon {background-position: 10px -70px;}
+.element-block.upload-edi:hover .icon {
+    background: rgba(0, 0, 0, 0) url("../img/dashborad/upload-edi-hover.svg") no-repeat scroll 15px 0;}
+
+.element-block.generate-edi  .icon {
+    background: rgba(0, 0, 0, 0) url("../img/dashborad/generate-edi.svg") no-repeat scroll 15px 0;}
+	
+.element-block.generate-edi:hover .icon {
+   background: rgba(0, 0, 0, 0) url("../img/dashborad/generate-edi-hover.svg") no-repeat scroll 15px 0;}
+
+.element-block.rules-mgmt .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/rules-mgmt.svg") no-repeat scroll 15px 0;}
+.element-block.rules-mgmt:hover .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/rules-mgmt-hover.svg") no-repeat scroll 15px 0;}
+
+.element-block.weigh-bridge .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/weigh-bridge.svg") no-repeat scroll 15px 0;}
+.element-block.weigh-bridge:hover .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/weigh-bridge-hover.svg") no-repeat scroll 15px 0;}
+
+
+.element-block.reports .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/reports.svg") no-repeat scroll 15px 0;}
+.element-block.reports:hover .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/reports-hover.svg") no-repeat scroll 15px 0;}
+
+.element-block.configuration .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/configuration.svg") no-repeat scroll 15px 0;}
+.element-block.configuration:hover .icon {background: rgba(0, 0, 0, 0) url("../img/dashborad/configuration-hover.svg") no-repeat scroll 15px 0;}
+
 .padding-bottom-none {
     padding-bottom: 0;
 }
@@ -3228,7 +3274,12 @@ Login
     padding: 0 30px 20px;
     position: relative;
 }
-
+.logo-fix-width img {
+    width: 190px;
+}
+.logo-fix-width > a {
+    padding-top: 14px;
+}
 /*------------------------------------*\
 Rule Mgmt page
 \*------------------------------------*/
